Fix scroll clipping issue in firefox

--- a/src/pages/work/index.module.sass
+++ b/src/pages/work/index.module.sass
@@ -1,6 +1,13 @@
 @import '../../styles/colors'
 @import '../../styles/mixins'
 
+.project-info-wrapper
+  position: absolute
+  top: 0
+  bottom: 0
+  width: 100%
+  overflow: hidden
+
 article.project-overview
   display: flex
   flex-direction: column
@@ -11,6 +18,7 @@ article.project-overview
   top: 0
   bottom: 80px
   width: 100%
+  max-width: 800px
   padding: 0 70px 50px 60px
 
 
